Fix color model for eu5