@@ -90,6 +90,7 @@ def getJvmArgs() {
     jvmRunArgs += [
             "--add-exports", "javafx.graphics/com.sun.javafx.tk=$appPackage",
             "--add-exports", "jdk.zipfs/jdk.nio.zipfs=io.xpipe.modulefs",
+            "--add-opens", "java.desktop/java.awt.image=$appPackage",
             "--add-opens", "javafx.graphics/com.sun.glass.ui=$appPackage",
             "--add-opens", "javafx.graphics/javafx.stage=$appPackage",
             "--add-opens", "javafx.graphics/com.sun.javafx.tk=$appPackage",
